creusot/tests/should_fail/bug/specialize.coma

module Alloc_Vec_Vec_Type
  use prelude.prelude.Opaque
  
  type t_vec 't 'a =
    | C_Vec hidden_field hidden_field
  
  function any_l (_ : 'b) : 'a
  
  let rec t_vec < 't > < 'a > (input:t_vec 't 'a) (ret  (buf:hidden_field) (len:hidden_field))= any
    [ good (buf:hidden_field) (len:hidden_field)-> {C_Vec buf len = input} (! ret {buf} {len})
    | bad (buf:hidden_field) (len:hidden_field)-> {C_Vec buf len <> input} {false} any ]
    
end
module Alloc_Alloc_Global_Type
  type t_global  =
    | C_Global
  
  function any_l (_ : 'b) : 'a
  
  let rec t_global (input:t_global) (ret  )= any
    [ good -> {C_Global  = input} (! ret) | bad -> {C_Global  <> input} {false} any ]
    
end
module Specialize_F
  let%span sspecialize0 = "../specialize.rs" 24 20 24 25
  
  let%span span1 = "../specialize.rs" 17 14 17 18
  
  use Alloc_Alloc_Global_Type as Global'0
  
  use prelude.prelude.UInt32
  
  use prelude.prelude.Int
  
  use Alloc_Vec_Vec_Type as Vec'0
  
  use prelude.prelude.Intrinsic
  
  let rec x'0 (self:Vec'0.t_vec uint32 (Global'0.t_global)) (return'  (ret:()))= any
    [ return' (result:())-> {[%#span1] true} (! return' {result}) ]
    
  
  let rec f (v:Vec'0.t_vec uint32 (Global'0.t_global)) (return'  (ret:()))= (! bb0
    [ bb0 = s0 [ s0 = x'0 {v} (fun (_ret':()) ->  [ &_2 <- _ret' ] s1) | s1 = bb1 ] 
    | bb1 = s0 [ s0 = {[@expl:assertion] [%#sspecialize0] false} s1 | s1 = bb2 ] 
    | bb2 = return' {_0} ]
    ) [ & _0 : () = any_l () | & v : Vec'0.t_vec uint32 (Global'0.t_global) = v | & _2 : () = any_l () ] 
    [ return' (result:())-> (! return' {result}) ]
    
end
module Alloc_Boxed_Box_Type
  use prelude.prelude.Opaque
  
  type t_box 't 'a =
    | C_Box hidden_field hidden_field
  
  function any_l (_ : 'b) : 'a
end
module Specialize_G
  type t
  
  let%span sspecialize0 = "../specialize.rs" 31 20 31 25
  
  let%span sspecialize1 = "../specialize.rs" 27 8 27 9
  
  let%span span2 = "../../../../../creusot-contracts/src/std/boxed.rs" 27 8 27 18
  
  let%span span3 = "../../../../../creusot-contracts/src/logic/seq.rs" 197 8 197 97
  
  let%span span4 = "" 0 0 0 0
  
  let%span span5 = "../../../../../creusot-contracts/src/std/vec.rs" 18 14 18 41
  
  let%span span6 = "../../../../../creusot-contracts/src/std/vec.rs" 60 20 60 41
  
  let%span span7 = "../specialize.rs" 6 9 6 13
  
  predicate invariant'3 (self : t)
  
  predicate inv'3 (_1 : t)
  
  axiom inv'3 : forall x : t . inv'3 x = true
  
  use Alloc_Alloc_Global_Type as Global'0
  
  predicate invariant'2 (self : t) =
    [%#span2] inv'3 self
  
  predicate inv'2 (_1 : t)
  
  axiom inv'2 : forall x : t . inv'2 x = true
  
  use seq.Seq
  
  use seq.Seq
  
  use prelude.prelude.Int
  
  use seq.Seq
  
  predicate invariant'1 (self : Seq.seq t) =
    [%#span3] forall i : int . 0 <= i /\ i < Seq.length self  -> inv'2 (Seq.get self i)
  
  predicate inv'1 (_1 : Seq.seq t)
  
  axiom inv'1 : forall x : Seq.seq t . inv'1 x = true
  
  use Alloc_Vec_Vec_Type as Vec'0
  
  use prelude.prelude.UIntSize
  
  use prelude.prelude.UIntSize
  
  constant max'0 : usize = [%#span4] (18446744073709551615 : usize)
  
  function shallow_model'0 (self : Vec'0.t_vec t (Global'0.t_global)) : Seq.seq t
  
  axiom shallow_model'0_spec : forall self : Vec'0.t_vec t (Global'0.t_global) . [%#span5] Seq.length (shallow_model'0 self)
  <= UIntSize.to_int (max'0 : usize)
  
  predicate invariant'0 (self : Vec'0.t_vec t (Global'0.t_global)) =
    [%#span6] inv'1 (shallow_model'0 self)
  
  predicate inv'0 (_1 : Vec'0.t_vec t (Global'0.t_global))
  
  axiom inv'0 : forall x : Vec'0.t_vec t (Global'0.t_global) . inv'0 x = true
  
  use prelude.prelude.Intrinsic
  
  let rec x'0 (self:Vec'0.t_vec t (Global'0.t_global)) (return'  (ret:()))= {[@expl:precondition] [%#span7] inv'0 self}
    any [ return' (result:())-> (! return' {result}) ] 
  
  let rec g (v:Vec'0.t_vec t (Global'0.t_global)) (return'  (ret:()))= {[%#sspecialize1] inv'0 v}
    (! bb0
    [ bb0 = s0 [ s0 = x'0 {v} (fun (_ret':()) ->  [ &_2 <- _ret' ] s1) | s1 = bb1 ] 
    | bb1 = s0 [ s0 = {[@expl:assertion] [%#sspecialize0] false} s1 | s1 = bb2 ] 
    | bb2 = return' {_0} ]
    ) [ & _0 : () = any_l () | & v : Vec'0.t_vec t (Global'0.t_global) = v | & _2 : () = any_l () ] 
    [ return' (result:())-> (! return' {result}) ]
    
end
module Specialize_H
  let%span sspecialize0 = "../specialize.rs" 37 20 37 25
  
  let%span span1 = "../../../../../creusot-contracts/src/invariant.rs" 8 8 8 12
  
  let%span span2 = "../../../../../creusot-contracts/src/std/boxed.rs" 27 8 27 18
  
  let%span span3 = "../../../../../creusot-contracts/src/logic/seq.rs" 197 8 197 97
  
  let%span span4 = "" 0 0 0 0
  
  let%span span5 = "../../../../../creusot-contracts/src/std/vec.rs" 18 14 18 41
  
  let%span span6 = "../../../../../creusot-contracts/src/std/vec.rs" 60 20 60 41
  
  let%span span7 = "../specialize.rs" 12 17 12 21
  
  let%span span8 = "../specialize.rs" 11 14 11 19
  
  use prelude.prelude.Int32
  
  predicate invariant'3 (self : int32) =
    [%#span1] true
  
  predicate inv'3 (_1 : int32)
  
  axiom inv'3 : forall x : int32 . inv'3 x = true
  
  use Alloc_Alloc_Global_Type as Global'0
  
  predicate invariant'2 (self : int32) =
    [%#span2] inv'3 self
  
  predicate inv'2 (_1 : int32)
  
  axiom inv'2 : forall x : int32 . inv'2 x = true
  
  use seq.Seq
  
  use seq.Seq
  
  use prelude.prelude.Int
  
  use seq.Seq
  
  predicate invariant'1 (self : Seq.seq int32) =
    [%#span3] forall i : int . 0 <= i /\ i < Seq.length self  -> inv'2 (Seq.get self i)
  
  predicate inv'1 (_1 : Seq.seq int32)
  
  axiom inv'1 : forall x : Seq.seq int32 . inv'1 x = true
  
  use Alloc_Vec_Vec_Type as Vec'0
  
  use prelude.prelude.UIntSize
  
  use prelude.prelude.UIntSize
  
  constant max'0 : usize = [%#span4] (18446744073709551615 : usize)
  
  function shallow_model'0 (self : Vec'0.t_vec int32 (Global'0.t_global)) : Seq.seq int32
  
  axiom shallow_model'0_spec : forall self : Vec'0.t_vec int32 (Global'0.t_global) . [%#span5] Seq.length (shallow_model'0 self)
  <= UIntSize.to_int (max'0 : usize)
  
  predicate invariant'0 (self : Vec'0.t_vec int32 (Global'0.t_global)) =
    [%#span6] inv'1 (shallow_model'0 self)
  
  predicate inv'0 (_1 : Vec'0.t_vec int32 (Global'0.t_global))
  
  axiom inv'0 : forall x : Vec'0.t_vec int32 (Global'0.t_global) . inv'0 x = true
  
  use prelude.prelude.Intrinsic
  
  let rec x'0 (self:Vec'0.t_vec int32 (Global'0.t_global)) (return'  (ret:()))= {[@expl:precondition] [%#span7] inv'0 self}
    any [ return' (result:())-> {[%#span8] false} (! return' {result}) ] 
  
  let rec h (v:Vec'0.t_vec int32 (Global'0.t_global)) (return'  (ret:()))= (! bb0
    [ bb0 = s0 [ s0 = x'0 {v} (fun (_ret':()) ->  [ &_2 <- _ret' ] s1) | s1 = bb1 ] 
    | bb1 = s0 [ s0 = {[@expl:assertion] [%#sspecialize0] false} s1 | s1 = bb2 ] 
    | bb2 = return' {_0} ]
    ) [ & _0 : () = any_l () | & v : Vec'0.t_vec int32 (Global'0.t_global) = v | & _2 : () = any_l () ] 
    [ return' (result:())-> (! return' {result}) ]
    
end
module Specialize_Impl0
  type u
  
  let%span sspecialize0 = "../specialize.rs" 12 4 12 22
  
  let%span span1 = "../../../../../creusot-contracts/src/std/boxed.rs" 27 8 27 18
  
  let%span span2 = "../../../../../creusot-contracts/src/logic/seq.rs" 197 8 197 97
  
  let%span span3 = "" 0 0 0 0
  
  let%span span4 = "../../../../../creusot-contracts/src/std/vec.rs" 18 14 18 41
  
  let%span span5 = "../../../../../creusot-contracts/src/std/vec.rs" 60 20 60 41
  
  predicate invariant'3 (self : u)
  
  predicate inv'3 (_1 : u)
  
  axiom inv'3 : forall x : u . inv'3 x = true
  
  use Alloc_Alloc_Global_Type as Global'0
  
  predicate invariant'2 (self : u) =
    [%#span1] inv'3 self
  
  predicate inv'2 (_1 : u)
  
  axiom inv'2 : forall x : u . inv'2 x = true
  
  use seq.Seq
  
  use seq.Seq
  
  use prelude.prelude.Int
  
  use seq.Seq
  
  predicate invariant'1 (self : Seq.seq u) =
    [%#span2] forall i : int . 0 <= i /\ i < Seq.length self  -> inv'2 (Seq.get self i)
  
  predicate inv'1 (_1 : Seq.seq u)
  
  axiom inv'1 : forall x : Seq.seq u . inv'1 x = true
  
  use Alloc_Vec_Vec_Type as Vec'0
  
  use prelude.prelude.UIntSize
  
  use prelude.prelude.UIntSize
  
  constant max'0 : usize = [%#span3] (18446744073709551615 : usize)
  
  function shallow_model'0 (self : Vec'0.t_vec u (Global'0.t_global)) : Seq.seq u
  
  axiom shallow_model'0_spec : forall self : Vec'0.t_vec u (Global'0.t_global) . [%#span4] Seq.length (shallow_model'0 self)
  <= UIntSize.to_int (max'0 : usize)
  
  predicate invariant'0 (self : Vec'0.t_vec u (Global'0.t_global)) =
    [%#span5] inv'1 (shallow_model'0 self)
  
  predicate inv'0 (_1 : Vec'0.t_vec u (Global'0.t_global))
  
  axiom inv'0 : forall x : Vec'0.t_vec u (Global'0.t_global) . inv'0 x = true
  
  goal x_refn : [%#sspecialize0] forall self : Vec'0.t_vec u (Global'0.t_global) . inv'0 self  -> inv'0 self
end
module Specialize_Impl1
  let%span sspecialize0 = "../specialize.rs" 18 4 18 14
  
  goal x_refn : [%#sspecialize0] true
end
